<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_margin="30px"
        android:text="@string/title_register"
        android:textAlignment="center"
        android:textColor="#0E0D0D"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtdocumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/document"
        android:inputType="text"
        android:textSize="2mm" />

    <EditText
        android:id="@+id/txtnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textSize="2mm" />

    <EditText
        android:id="@+id/txtedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textSize="2mm" />

    <EditText
        android:id="@+id/txttelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:textSize="2mm" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Direction"
        android:inputType="text"
        android:textSize="2mm" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="247dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="205dp"
            android:layout_height="242dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="244dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtMateria1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/matter1"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/txtMateria2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/matter2"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/txtMateria3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/matter3"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/txtMateria4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/matter4"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/txtMateria5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/matter5"
                    android:inputType="text" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="243dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtNota1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nota1"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/txtNota2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nota2"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/txtNota3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nota3"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/txtNota4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nota4"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/txtNota5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nota5"
                    android:inputType="numberDecimal" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick=""
        android:text="@string/button_register" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />


</LinearLayout>










