<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <TextView
            android:id="@+id/txtTituloDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="34sp"
            tools:text="@string/detalle_estudiante" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <TextView
            android:id="@+id/txtDetalleDocumento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="20sp"
            tools:text="@string/document" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <TextView
            android:id="@+id/txtDetalleNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="20sp"
            tools:text="@string/full_name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <TextView
            android:id="@+id/txtDetalleEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="20sp"
            tools:text="@string/age" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <TextView
            android:id="@+id/txtDetalleTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Telefono:"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <TextView
            android:id="@+id/txtDetalleDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            tools:text="@string/Direction" />

        <TextView
            android:id="@+id/txtDetalleTituloMaterias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Materias"
            android:textAlignment="center"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/txtDetalleMateria1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            tools:text="@string/matter1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <TextView
            android:id="@+id/txtDetalleMateria2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matter2"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <TextView
            android:id="@+id/txtDetalleMateria3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            tools:text="@string/matter3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <TextView
            android:id="@+id/txtDetalleMateria4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matter4"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <TextView
            android:id="@+id/txtDetalleMateria5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            tools:text="@string/matter5" />

        <TextView
            android:id="@+id/txtDetalleResultadoFinal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:text="@string/aprobo" />

        <TextView
            android:id="@+id/txtRecuperable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recuperable"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDetalleVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>