<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTituloAyuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_help"
            android:textAlignment="center"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <TextView
            android:id="@+id/txtAyudaExplicacion"
            android:layout_width="match_parent"
            android:layout_height="343dp"
            android:text="@string/help"
            android:textSize="8sp" />

        <Button
            android:id="@+id/btnAyudaVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>