<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="39dp" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="34sp"
            tools:text="Bienvenidos" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="218dp" />

        <Button
            android:id="@+id/btnAyuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_help"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEstadisticas"
            app:layout_constraintVertical_bias="0.127" />

        <Button
            android:id="@+id/btnEstadisticas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_statistics"
            tools:layout_editor_absoluteX="134dp"
            tools:layout_editor_absoluteY="289dp" />
    </LinearLayout>

</LinearLayout>